# hexagon-ex-android

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/c0de4un/hexagonex/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: native-lib.cpp
app/src/main/java/com/c0de4un/hexagonex/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/c0de4un/hexagonex/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
